[tool.poetry]
package-mode = false

[project]
name = "librebooking-docker"
version = "0.1.0"
description = "LibreBooking Docker dev tooling & tests"
authors = [{ name = "barakiva" }]
readme = "README.md"
requires-python = "^3.10"
dependencies = ["pytest (>=9.0.2,<10.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "pytest-dependency (>=0.6.1,<0.7.0)", "python-dotenv (>=1.2.2,<2.0.0)"]
